--- a/index.html
+++ b/index.html
@@ -9,5 +9,16 @@
 <body>
     <script src="/index.js"></script>
     <link rel="stylesheet" href="index.css">
+    <div id="container">
+        <h2>LOGIN</h2>
+        <input type="text" placeholder="username">
+        <input type="text" placeholder="password">
+        <input type="button" value="continue" onclick="firstPageCont()">
+        <h2>Not a Student</h2>
+        <a href="">terms</a>
+        <input type="checkbox" name="" id="">
+        <input type="button" value="Login as guest" onclick="firstPageCont()">
+    </div>
+
 </body>
 </html>
